# sebi

./: Cargo.toml  README.md
crates/sebi-cli/: Cargo.toml
crates/sebi-cli/fixtures/: cpp_kv_store_simple.wasm  cpp_kv_store_simple.wat  cpp_token_bridge_complex.wasm  cpp_token_bridge_complex.wat  rust_counter_safe.wasm  rust_counter_safe.wat  rust_registry_complex.wasm  rust_registry_complex.wat  stylus_dex_router_complex.wasm  stylus_dex_router_complex.wat  stylus_erc20_safe.wasm  stylus_erc20_safe.wat
crates/sebi-cli/src/: args.rs  main.rs
crates/sebi-cli/tests/: cli.rs
crates/sebi-core/: Cargo.toml
crates/sebi-core/src/: lib.rs
crates/sebi-core/src/report/: model.rs  render.rs
crates/sebi-core/src/rules/: catalog.rs  classify.rs  eval.rs  mod.rs
crates/sebi-core/src/signals/: extract.rs  model.rs
crates/sebi-core/src/util/: deterministic.rs
crates/sebi-core/src/wasm/: mod.rs  parse.rs  read.rs  scan.rs  sections.rs  stylus.rs
crates/sebi-core/tests/: integration.rs
crates/sebi-core/tests/fixtures/: all_signals.wat  cpp_allocator.wat  cpp_vtable_erc20.wat  imported_memory_bounded.wat  imported_memory_unbounded.wat  minimal_module.wat  multiple_memory_grow.wat  nested_loops.wat  rust_dynamic_dispatch.wat  rust_loop_unbounded_mem.wat  rust_safe_storage.wat
docs/: RULES.md  SCHEMA.md  SCHEMA.md.md
