[workspace.package]
edition = "2024"

[workspace]
members = ["crates/sebi-cli","crates/sebi-core"]

resolver = "2"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2.0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasmparser = "0.244.0"
sha2 = "0.10"
hex = "0.4"