[package]
name = "sebi-cli"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
sebi-core = { path = "../sebi-core" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = { workspace = true }
tempfile = "3"