[package]
name = "sebi-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
wasmparser = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
